--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <ul class="box-primary-nav">
                 <li class="box-label">Menu</li>
 
-                <li><a href="index.html">Intro</a> <i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="index.html">Home</a> <i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="https://instagram.com/2005_danielus">Daniel Lopez</a></li>
 
 
