--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-
+<script data-ad-client="ca-pub-6452629471609437" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 
     <!-- Bootstrap -->
